--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,10 @@ web_modules/
 # Yarn Integrity file
 .yarn-integrity
 
+# dotenv environment variable files
+.env
+.env.*
+
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
